Add configurable min ray depth for russian roulette and clamp the probability.